feat: ajout endpoints communautés gérées
